# SimpleAlternateLevelling

./: AGENTS.md  CLAUDE.md  CMakeLists.txt
assets/swf_src/scripts/frame_1/: DoAction.as
data/SKSE/Plugins/: ExperienceAndAttributes.json  SimpleAlternateLevelling.json
include/: Config.h  SkillMenu.h  XPManager.h
src/: Config.cpp  EventSinks.cpp  SkillHook.cpp  SkillMenu.cpp  XPManager.cpp  main.cpp
